[package]
name = "superpixel"
version = "0.1.0"
authors = ["joel"]
exclude = [
    "assets/*",
]

[dependencies]
image = "*"
num-traits = "*"
docopt = { version = "0.6", optional = true }
rustc-serialize = "0.3"

[features]
build-binary = ["docopt"]

[[bin]]         
name = "superpixel"    
required-features = ["build-binary"]