[package]
name = "superpixel"
description = "Superpixel algorithm library"
keywords = ["computer-vision"]
repository = "https://github.com/ferrouswheel/superpixel-rs"
version = "0.1.0"
authors = ["joel"]
exclude = [
    "assets/*",
]
license = "MIT"


[dependencies]
image = "*"
num-traits = "*"
docopt = { version = "0.6", optional = true }
rustc-serialize = "0.3"

[features]
build-binary = ["docopt"]

[[bin]]         
name = "superpixel"    
required-features = ["build-binary"]