[package]
name = "superpixel"
description = "Superpixel algorithm library"
keywords = ["computer-vision"]
repository = "https://github.com/ferrouswheel/superpixel-rs"
version = "0.1.1"
authors = ["joel"]
exclude = [
    "assets/*",
]
readme = "README.md"
license = "MIT"


[dependencies]
image = "0.19.0"
num-traits = "0.2.5"
docopt = { version = "0.6", optional = true }
rustc-serialize = "0.3"

[features]
build-binary = ["docopt"]

[[bin]]         
name = "superpixel"    
required-features = ["build-binary"]